[fix]移除导航页中文名

--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -13,7 +13,7 @@
                                 <a href="/">
                                         <div>
                                                 <div class="enName">Home</div>
-                                                <div class="cnName">首页</div>
+<!--                                                <div class="cnName">首页</div>-->
                                         </div>
                                 </a>
                         </li>
@@ -21,7 +21,7 @@
                                 <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/news/">
                                         <div>
                                                 <div class="enName">News</div>
-                                                <div class="cnName">新闻动态</div>
+<!--                                                <div class="cnName">新闻动态</div>-->
                                         </div>
                                 </a>
                         </li>
@@ -29,7 +29,7 @@
                                 <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/events/">
                                         <div>
                                                 <div class="enName">Events</div>
-                                                <div class="cnName">学术活动</div>
+<!--                                                <div class="cnName">学术活动</div>-->
                                         </div>
                                 </a>
                         </li>
@@ -37,7 +37,7 @@
                                 <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/training/">
                                         <div>
                                                 <div class="enName">Training</div>
-                                                <div class="cnName">方法培训</div>
+<!--                                                <div class="cnName">方法培训</div>-->
                                         </div>
                                 </a>
                         </li>
@@ -45,7 +45,7 @@
                                 <a href="/join/">
                                         <div>
                                                 <div class="enName">Get Involved</div>
-                                                <div class="cnName">加入我们</div>
+<!--                                                <div class="cnName">加入我们</div>-->
                                         </div>
                                 </a>
                         </li>
