--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -27,24 +27,24 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-lg-2 col-md-2">
-                                <span class="contact-label fieldRequired">
-                                    <span>
-                                        姓名(中文)
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="col-lg-4 col-md-4">
-                                <input type="text" class="form-control" id="chineseName">
-                            </div>
+<!--                            <div class="col-lg-2 col-md-2">-->
+<!--                                <span class="contact-label fieldRequired">-->
+<!--                                    <span>-->
+<!--                                        姓名(中文)-->
+<!--                                    </span>-->
+<!--                                </span>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-4 col-md-4">-->
+<!--                                <input type="text" class="form-control" id="chineseName">-->
+<!--                            </div>-->
                             <div class="col-lg-2 col-md-2">
                                 <span class="contact-label">
                                     <span class="primaryItem">
                                         Gender
                                     </span>
-                                    <span>
-                                        性别
-                                    </span>
+<!--                                    <span>-->
+<!--                                        性别-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -57,9 +57,9 @@
                                     <span class="primaryItem">
                                         Highest academic degree
                                     </span>
-                                    <span>
-                                        最高学位
-                                    </span>
+<!--                                    <span>-->
+<!--                                        最高学位-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -70,9 +70,9 @@
                                     <span class="primaryItem">
                                         Date of birth
                                     </span>
-                                    <span>
-                                        出生年月
-                                    </span>
+<!--                                    <span>-->
+<!--                                        出生年月-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -85,9 +85,9 @@
                                     <span class="primaryItem">
                                         Email
                                     </span>
-                                    <span>
-                                        邮箱
-                                    </span>
+<!--                                    <span>-->
+<!--                                        邮箱-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -98,9 +98,9 @@
                                     <span class="primaryItem">
                                         Phone number
                                     </span>
-                                    <span>
-                                        手机号
-                                    </span>
+<!--                                    <span>-->
+<!--                                        手机号-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -112,9 +112,9 @@
                                 <span class="primaryItem">
                                     Employer
                                 </span>
-                                <span>
-                                    工作单位
-                                </span>
+<!--                                <span>-->
+<!--                                    工作单位-->
+<!--                                </span>-->
                             </span>
                             <div class="col-lg-10 col-md-10">
                                 <input type="text" class="form-control" id="work" placeholder="">
@@ -126,9 +126,9 @@
                                     <span class="primaryItem">
                                         Job title
                                     </span>
-                                    <span>
-                                        职称
-                                    </span>
+<!--                                    <span>-->
+<!--                                        职称-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -139,9 +139,9 @@
                                     <span class="primaryItem">
                                         Position
                                     </span>
-                                    <span>
-                                        职务
-                                    </span>
+<!--                                    <span>-->
+<!--                                        职务-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-4 col-md-4">
@@ -154,9 +154,9 @@
                                     <span class="primaryItem">
                                         Educational experience
                                     </span>
-                                    <span>
-                                        教育经历
-                                    </span>
+<!--                                    <span>-->
+<!--                                        教育经历-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-10 col-md-10">
@@ -169,9 +169,9 @@
                                     <span class="primaryItem">
                                         Work experience
                                     </span>
-                                    <span>
-                                        工作经历
-                                    </span>
+<!--                                    <span>-->
+<!--                                        工作经历-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-10 col-md-10">
@@ -184,9 +184,9 @@
                                     <span class="primaryItem">
                                         Main research fields and representative achievements
                                     </span>
-                                    <span>
-                                        主要研究领域与代表性成果
-                                    </span>
+<!--                                    <span>-->
+<!--                                        主要研究领域与代表性成果-->
+<!--                                    </span>-->
                                 </span>
                             </div>
                             <div class="col-lg-10 col-md-10">
