--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -18,6 +18,13 @@
                                 </a>
                         </li>
                         <li>
+                                <a href="/ASSA/">
+                                        <div>
+                                                <div class="enName">ASSA</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
                                 <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/news/">
                                         <div>
                                                 <div class="enName">News</div>
@@ -34,10 +41,24 @@
                                 </a>
                         </li>
                         <li>
+                                <a href="/SIG/">
+                                        <div>
+                                                <div class="enName">Special Interest Groups</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
                                 <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/training/">
                                         <div>
                                                 <div class="enName">Training</div>
 <!--                                                <div class="cnName">方法培训</div>-->
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/awards/">
+                                        <div>
+                                                <div class="enName">Awards</div>
                                         </div>
                                 </a>
                         </li>
