--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -48,9 +48,9 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/training/">
+                                <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/trainings/">
                                         <div>
-                                                <div class="enName">Training</div>
+                                                <div class="enName">Trainings</div>
 <!--                                                <div class="cnName">方法培训</div>-->
                                         </div>
                                 </a>
