--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col-lg-10 col-md-10 offset-lg-1">
                 <div class="contact-box text-center">
+                    <div class="form-title">Information</div>
                     <form id="ajax-contact">
                         <div class="form-group row">
                             <div class="col-lg-2 col-md-2">
