[fix]加入awards、sponsor入口

--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -194,6 +194,11 @@
                                 <textarea class="form-control" id="achievement" rows="5"></textarea>
                             </div>
                         </div>
+                        <div class="form-group row">
+                            <div class="col-lg-6 col-md-6">
+                                <a href="http://www.essa.eu.org/support/" target="_blank">Want to sponsor us?</a>
+                            </div>
+                        </div>
                         <button type="submit" class="submitBtn" onsubmit="submitFn()">
                             Submit
                         </button>
