[fix]修正布局错误

--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -222,7 +222,7 @@
                                 <div>
                                     <div>for non-student participants, with the right to vote and to stand for election.</div>
                                     <div>Rate: ￥1000 RMB or $125 USD for 2 years</div>
-                                <div>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group row">
