[fix]更新News ASSA SIG

--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -206,7 +206,7 @@
                                 <select class="membershipPicker" value="1">
                                     <option value="1">Member (normal rate)</option>
                                     <option value="2">Member (reduced rate)</option>
-                                    <option value="3">Senior Member</option>
+                                    <option value="3">Honorary Member</option>
                                 </select>
                             </div>
                         </div>
