[fix]调整/join页面，加入/pay

--- a/themes/suka/src/css/spectre.css
+++ b/themes/suka/src/css/spectre.css
@@ -790,10 +790,10 @@ dl dd {
   font-size: 24px;
   font-weight: bold;
 }
-.membershipPicker {
+.selectPicker {
   font-size: 16px;
 }
-.membershipDesc {
+.selectDesc {
   font-size: 16px;
   text-align: left;
 }
