--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -48,8 +48,12 @@
 <!--                                    </span>-->
                                 </span>
                             </div>
-                            <div class="col-lg-4 col-md-4">
-                                <input type="text" class="form-control" id="sex">
+                            <div class="col-lg-3 col-md-3">
+                                <select class="selectPicker" id="sex" value="1">
+                                    <option value="Male">Male</option>
+                                    <option value="Female">Female</option>
+                                    <option value="Not_to_say">Prefer not to say</option>
+                                </select>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -67,7 +71,7 @@
                                 <input type="text" class="form-control" id="degree">
                             </div>
                             <div class="col-lg-2 col-md-2">
-                                <span class="contact-label fieldRequired">
+                                <span class="contact-label">
                                     <span class="primaryItem">
                                         Date of birth
                                     </span>
@@ -109,14 +113,16 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <span class="col-lg-2 col-md-2 contact-label fieldRequired">
-                                <span class="primaryItem">
-                                    Employer
-                                </span>
+                            <div class="col-lg-2 col-md-2">
+                                <span class="contact-label fieldRequired">
+                                    <span class="primaryItem">
+                                        Affiliation
+                                    </span>
 <!--                                <span>-->
 <!--                                    工作单位-->
 <!--                                </span>-->
-                            </span>
+                                </span>
+                            </div>
                             <div class="col-lg-10 col-md-10">
                                 <input type="text" class="form-control" id="work" placeholder="">
                             </div>
@@ -203,7 +209,7 @@
                                 </span>
                             </div>
                             <div class="col-lg-3 col-md-3">
-                                <select class="membershipPicker" value="1">
+                                <select class="selectPicker" id="membership" value="1">
                                     <option value="1">Member (normal rate)</option>
                                     <option value="2">Member (reduced rate)</option>
                                     <option value="3">Honorary Member</option>
@@ -218,20 +224,14 @@
                                     </span>
                                 </span>
                             </div>
-                            <div class="col-lg-10 col-md-10 membershipDesc">
+                            <div class="col-lg-10 col-md-10 selectDesc membershipDesc">
                                 <div>
-                                    <div>for non-student participants, with the right to vote and to stand for election.</div>
-                                    <div>Rate: ￥1000 RMB or $125 USD for 2 years</div>
+                                    For regular (non-student) participants, with the right to vote and to stand for election.
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <div class="col-lg-6 col-md-6">
-                                <a href="http://www.essa.eu.org/support/" target="_blank">Want to sponsor us?</a>
-                            </div>
-                        </div>
                         <button type="submit" class="submitBtn" onsubmit="submitFn()">
-                            Submit
+                            Pay Member Fee and Download Invoice
                         </button>
                         <div id="form-message">
                         </div>
@@ -243,39 +243,44 @@
 </section>
 <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.0.0/dist/av-min.js"></script>
 <script>
-    (function (){
+    // (function (){
         window.AV.init({
             appId: 'n87e56Pd4vy8Mc5lBhD5zcI8-gzGzoHsz',
             appKey: 'ewwupYEWGyfQU6FioTg6IhCQ',
             serverURLs: "https://n87e56pd.lc-cn-n1-shared.com"
         });
 
-        window.jQuery(".membershipPicker").change(function(){
-            var value = window.jQuery(".membershipPicker").val();
-            var valueMap = {
+        window.jQuery("#membership").change(function(){
+            const membershipDescMap = {
                 1: `<div>
-                        <div>for non-student participants, with the right to vote and to stand for election.</div>
-                        <div>Rate: ￥1000 RMB or $125 USD for 2 years</div>
+                        For regular (non-student) participants, with the right to vote and to stand for election.
                     <div>`,
                 2: `<div>
-                        <div>for undergraduate and postgraduate students, with the right to vote and to stand for election.</div>
-                        <div>Rate: ￥200 RMB or $25 USD for 2 years</div>
+                        Only for student participants, with the right to vote and to stand for election. The email address must contain the university/college/institution domain to verify the student's identity.
                     <div>`,
                 3: `<div>
-                        <div>for non-student participants owning a senior professional title, without the right to vote and to stand for election.</div>
-                        <div>Rate: free</div>
+                        For participants without the right to vote and to stand for election.
                     <div>`,
             }
-            var text = valueMap[value];
-            window.jQuery('.membershipDesc').html(text);
-        });  //为Select添加事件，当选择其中一项时触发
+            const submitBtnMap = {
+                1: `Pay Member Fee and Download Invoice`,
+                2: `Pay Member Fee and Download Invoice`,
+                3: `Submit Registration Form`,
+            }
+            const value = window.jQuery("#membership").val();
+            const membershipDescText = membershipDescMap[value];
+            window.jQuery('.membershipDesc').html(membershipDescText);
 
-            const formItem = document.querySelector('#ajax-contact');
+            const submitBtnText = submitBtnMap[value];
+            window.jQuery('.submitBtn').text(submitBtnText);
+        });
+
+        const formItem = document.querySelector('#ajax-contact');
         formItem && formItem.addEventListener('submit', submitFn);
 
         function submitFn(e) {
             e.preventDefault();
-            const list = ['familyName', 'givenName', 'chineseName', 'sex', 'degree', 'birthday', 'email', 'phone', 'work', 'title', 'duty', 'educationalExperience', 'workExperience', 'achievement'];
+            const list = ['familyName', 'givenName', 'chineseName', 'sex', 'degree', 'birthday', 'email', 'phone', 'work', 'title', 'duty', 'educationalExperience', 'workExperience', 'achievement', 'membership'];
             const params = list.reduce((acc, curr) => {
                 const valueDom = document.querySelector('#' + curr);
                 if (!valueDom) {
@@ -303,7 +308,7 @@
                     return false;
                 } else if(['familyName', 'givenName', 'chineseName'].includes(item)){
                     // English name is filled or chineseName is filled, OK!
-                    if ((params['familyName'] !== -1 && params['givenName'] !== -1) || params['chineseName'] !== -1 ) {
+                    if ((params['familyName'] !== -1 && params['givenName'] !== -1)) {
                         return false
                     }
                 }
@@ -320,8 +325,11 @@
             const formObject = new Forms();
             formObject.save(params).then((result) => {
                 formItem.reset();
+                if (['1', '2'].includes(params.membership)) {
+                    location.href = '/pay';
+                    return;
+                }
                 echoMessage('We have received your submission and will review and reply.');
-
             }).catch(err => {
                 echoMessage('Something error, please try later');
                 console.log('error', err);
@@ -339,5 +347,5 @@
                 }
             }
         }
-    })();
+    // })();
 </script>
