--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -204,14 +204,14 @@
                             <div class="col-lg-2 col-md-2">
                                 <span class="contact-label fieldRequired">
                                     <span class="primaryItem">
-                                        Membership fee
+                                        Membership dues
                                     </span>
                                 </span>
                             </div>
                             <div class="col-lg-3 col-md-3">
                                 <select class="selectPicker" id="membership" value="1">
-                                    <option value="1">Member (normal rate)</option>
-                                    <option value="2">Member (reduced rate)</option>
+                                    <option value="1">Member (normal dues)</option>
+                                    <option value="2">Member (reduced dues)</option>
                                     <option value="3">Honorary Member</option>
                                 </select>
                             </div>
@@ -226,12 +226,13 @@
                             </div>
                             <div class="col-lg-10 col-md-10 selectDesc membershipDesc">
                                 <div>
-                                    For regular (non-student) participants, with the right to vote and to stand for election.
+                                    <div>For regular (non-student) participants, with the right to vote and to stand for election.</div>
+                                    <div>Dues: $125 USD for 2 years</div>
                                 </div>
                             </div>
                         </div>
                         <button type="submit" class="submitBtn" onsubmit="submitFn()">
-                            Pay Member Fee and Download Invoice
+                            Pay Member Dues and Download Invoice
                         </button>
                         <div id="form-message">
                         </div>
@@ -253,18 +254,20 @@
         window.jQuery("#membership").change(function(){
             const membershipDescMap = {
                 1: `<div>
-                        For regular (non-student) participants, with the right to vote and to stand for election.
+                        <div>For regular (non-student) participants, with the right to vote and to stand for election.</div>
+                        <div>Dues: $125 USD for 2 years</div>
                     <div>`,
                 2: `<div>
-                        Only for student participants, with the right to vote and to stand for election. The email address must contain the university/college/institution domain to verify the student's identity.
+                        <div>Only for student participants, with the right to vote and to stand for election. The email address must contain the university/college/institution domain to verify the student's identity.</div>
+                        <div>Dues: $25 USD for 2 years</div>
                     <div>`,
                 3: `<div>
-                        For participants without the right to vote and to stand for election.
+                        <div>For participants without the right to vote and to stand for election.</div>
                     <div>`,
             }
             const submitBtnMap = {
-                1: `Pay Member Fee and Download Invoice`,
-                2: `Pay Member Fee and Download Invoice`,
+                1: `Pay Member Dues and Download Invoice`,
+                2: `Pay Member Dues and Download Invoice`,
                 3: `Submit Registration Form`,
             }
             const value = window.jQuery("#membership").val();
