--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -233,7 +233,8 @@
                                 <div>
                                     <div>For regular (non-student) participants, with the right to vote and to stand for election.</div>
                                     <p>Dues: $125 USD for 2 years</p>
-                                    <div style="color: #ff8200">Details needed for making the invoice (in English or Chinese)</div>
+                                    <div style="color: #ff8200;margin-bottom: 4px;">Details needed for making the invoice (in English or Chinese)</div>
+                                    <div><input type="text" class="form-control" id="invoiceDetail"></div>
                                 </div>
                             </div>
                         </div>
@@ -262,12 +263,14 @@
                 1: `<div>
                         <div>For regular (non-student) participants, with the right to vote and to stand for election.</div>
                         <p>Dues: $125 USD for 2 years</p>
-                        <div style="color: #ff8200">Details needed for making the invoice (in English or Chinese)</div>
+                        <div style="color: #ff8200;margin-bottom: 4px;">Details needed for making the invoice (in English or Chinese)</div>
+                        <div><input type="text" class="form-control" id="invoiceDetail"></div>
                     <div>`,
                 2: `<div>
                         <div>Only for student participants, with the right to vote and to stand for election. The email address must contain the university/college/institution domain to verify the student's identity.</div>
                         <p>Dues: $25 USD for 2 years</p>
-                        <div style="color: #ff8200">Details needed for making the invoice (in English or Chinese)</div>
+                        <div style="color: #ff8200;margin-bottom: 4px;">Details needed for making the invoice (in English or Chinese)</div>
+                        <div><input type="text" class="form-control" id="invoiceDetail"></div>
                     <div>`,
                 3: `<div>
                         <div>For senior scholars not considering the right to vote and to stand for election.</div>
@@ -291,7 +294,7 @@
 
         function submitFn(e) {
             e.preventDefault();
-            const list = ['familyName', 'givenName', 'chineseName', 'sex', 'degree', 'birthday', 'email', 'phone', 'work', 'title', 'duty', 'educationalExperience', 'workExperience', 'achievement', 'membership'];
+            const list = ['familyName', 'givenName', 'chineseName', 'sex', 'degree', 'birthday', 'email', 'phone', 'work', 'title', 'duty', 'educationalExperience', 'workExperience', 'achievement', 'membership', 'invoiceDetail'];
             const params = list.reduce((acc, curr) => {
                 const valueDom = document.querySelector('#' + curr);
                 if (!valueDom) {
