--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -2,7 +2,7 @@
         <div class="h_nav-section">
                 <div class="h_nav_header">
                         <span class="goto_logo">
-                                <a href="/"><img class="h_logo goto_logo" alt="<%= config.title%>" src="/img/logo/left-logo.png?t=<%= config.buildTs%>" ></a>
+                                <a href="/"><img class="h_logo goto_logo" alt="<%= config.title%>" src="/img/logo/logo202308.png?t=<%= config.buildTs%>" ></a>
                         </span>
                 </div>
         </div>
