--- a/themes/suka/src/css/post.css
+++ b/themes/suka/src/css/post.css
@@ -23,6 +23,32 @@
 .post_flex_center_center + .post_flex_center_center {
     margin-top: 8px;
 }
+.post_paddingLeftIntend2 {
+    padding-left: 2em;
+}
+.post_listIntend2 {
+    position: relative;
+    padding-left: 24px;
+}
+.post_listIntend2:before {
+    content: attr(data-num);
+    position: absolute;
+    left: 0;
+}
+.post_textIntend2 {
+    text-indent: 2em;
+}
+.post_textIntend4 {
+    text-indent: 4em;
+}
+.post_indentBox2 {
+    display: inline-block;
+    width: 2em;
+}
+.post_indentBox4 {
+    display: inline-block;
+    width: 4em;
+}
 
 .post_flex_1 {
     flex: 1;
