--- a/themes/suka/src/css/style.css
+++ b/themes/suka/src/css/style.css
@@ -50,6 +50,23 @@ body.body {
     padding-left: calc(100vw - 100%);
     font-family: "Calibre Web Bold",arial,sans-serif,微软雅黑, "Microsoft YaHei",PingFangSC-Regular, Arial,Helvetica,"宋体"
 }
+/* iconfont */
+@font-face {font-family: "iconfont";
+    src: url('/fonts/icomoon.eot?t=1501489744354'); /* IE9*/
+    src: url('/fonts/icomoon.eot?t=1501489744354#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/fonts/icomoon.woff?t=1501489744354') format('woff'), /* chrome, firefox */
+    url('/fonts/icomoon.ttf?t=1501489744354') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('/fonts/icomoon.svg?t=1501489744354#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 body.body a,
 body.body a:hover,
 body.body a:visited,
@@ -768,7 +785,20 @@ a.category-link {
 
 #post-content a {
     background-color: transparent;
-    text-decoration: none;
+    text-decoration: underline;
+}
+/* 用icon指示链接 */
+#post-content a[href^="/"]:after {
+    content: '\e900';
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+}
+#post-content a[href^="http"]:after {
+    content: '\e900';
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
 }
 #post-content blockquote a {
     word-break: break-all;
